--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "browsersync": "browser-sync start --server _site --files _site --port 8080 --no-notify --no-open"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "@tailwindcss/typography": "^0.5.0",
-    "alpinejs": "^3.7.1",
-    "browser-sync": "^2.27.7",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.0.15",
-    "html-minifier": "^4.0.0",
-    "js-yaml": "^4.1.0",
-    "luxon": "^2.3.0",
+    "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "alpinejs": "^3.15.4",
+    "browser-sync": "^3.0.4",
+    "cross-env": "^10.1.0",
+    "cssnano": "^7.1.2",
+    "js-yaml": "^4.1.1",
+    "luxon": "^3.7.2",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^9.1.0",
-    "prismjs": "^1.26.0",
-    "tailwindcss": "^3.0.13"
+    "postcss-cli": "^11.0.1",
+    "prismjs": "^1.30.0",
+    "tailwindcss": "^4.1.18"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5"
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6"
   }
 }
