--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -30,6 +30,16 @@ collections:
         multiple: true
         create: true
         options: ["Tags", "created", "from", "config.yml"]
+  - label: "Bulletin"
+    name: "bulletin"
+    folder: "src/bulletin"
+    create: true
+    media_folder: ""
+    public_folder: ""
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Upload", name: "pdf_file", widget: "file" }
   - label: "Settings"
     name: "settings"
     editor:
