--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,4 @@
 ---
-name: Neat Starter
-author: Surjith S M
-url: "https://surjithctly.in/"
+name: St John the Beloved, Mt Druitt
+author: Raymond Z
+url: "https://rymnd.dev"
