--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -39,7 +39,20 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Upload", name: "pdf_file", widget: "file" }
+      - { label: "Upload", name: "file", widget: "file" }
+  - label: "Homily"
+    name: "homilies"
+    folder: "src/homilies"
+    create: true
+    media_folder: ""
+    public_folder: ""
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Author", name: "author", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Upload", name: "file", widget: "file" }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
   - label: "Settings"
     name: "settings"
     editor:
