--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -30,7 +30,18 @@ collections:
         multiple: true
         create: true
         options: ["Tags", "created", "from", "config.yml"]
-  - label: "Bulletin"
+  - label: "What's On"
+    label_singular: "Event"
+    name: "whats-on"
+    folder: "src/whats-on"
+    create: true
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Upload", name: "file", widget: "file" }
+
+  - label: "Bulletins"
+    label_singular: "Edition"
     name: "bulletin"
     folder: "src/bulletin"
     create: true
@@ -39,8 +50,9 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Upload", name: "file", widget: "file" }
-  - label: "Homily"
+      - { label: "Image", name: "image", widget: "image" }
+  - label: "Homilies"
+    label_singular: "Homily"
     name: "homilies"
     folder: "src/homilies"
     create: true
